bugfix/RA-193-Profile-Overflow

--- a/frontend/src/ui/section/profile/Profile.scss
+++ b/frontend/src/ui/section/profile/Profile.scss
@@ -123,18 +123,22 @@
   }
 
   .languages {
-    padding: 8px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 
     &__title {
       padding-left: 16px;
+      color: $rindus-dark-gray;
+      font-family: $font-poppins-regular;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px;
     }
     &__title-container {
-      color: #303140;
       width: 100%;
-      border-bottom: 1px solid #dddde2;
+      border-bottom: 1px solid $rindus-light-gray;
       padding-bottom: 12px;
     }
     &__tags-container {
